<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="score_team2">0</string>
    <string name="score_team1">0</string>
    <string name="plus_team_2">Plus team 2</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
</resources>