<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp"
        android:layout_margin="40dp">

        <TextView
            android:id="@+id/team1score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_team1"
            android:layout_centerInParent="true"
            android:textSize="@dimen/score"/>

        <TextView
            android:id="@+id/team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/atomic_age"
            android:textSize="@dimen/title"
            android:text="@string/team_1" />

        <ImageButton
            android:id="@+id/plus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:background="@drawable/button_background"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/minus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            android:background="@drawable/button_background"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck"
            android:contentDescription="@string/todo1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp"
        android:layout_margin="40dp">

        <TextView
            android:id="@+id/team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:ignore="RelativeOverlap"
            android:fontFamily="@font/atomic_age"
            android:textSize="@dimen/title"/>

        <TextView
            android:id="@+id/team2score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_team2"
            android:layout_centerInParent="true"
            tools:ignore="RelativeOverlap"
            android:textSize="@dimen/score"/>


        <ImageButton
            android:id="@+id/plus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_team_2"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:background="@drawable/button_background"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/minus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            android:background="@drawable/button_background"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/todo3" />
    </RelativeLayout>
</LinearLayout>